--- a/src/app/funcionesMenu/eventos/detalle-evento/detalle-evento.page.html
+++ b/src/app/funcionesMenu/eventos/detalle-evento/detalle-evento.page.html
@@ -9,90 +9,151 @@
 
 <ion-content class="ion-padding">
 
-    <!-- <ion-row>   
-        <ul class="list-group">
-            <li class="list-group-item" *ngFor="let e of evento; let i = index">{{e.detallePersonaEvento.apellidoPersona}} {{e.detallePersonaEvento.nombrePersona}} {{e.detallePersonaEvento.dniPersona}} {{e.horaIngreso | date:'short'}} {{e.horaEngreso | date:'short'}}</li>
-        </ul>
-    </ion-row> -->
-
-    <ion-row>
+    <!-- <ng-container *ngIf="evento === undefined;else elseTemplate">
+        <ion-row class="spinner">
+            <ion-spinner name="lines"></ion-spinner>
+        </ion-row>
+    </ng-container>
+    
+    <ng-template #elseTemplate>
+        <ion-row>
             <ion-list>
-              <ion-row>
-                  <ion-col>
-                      <ion-item>
-                          <ion-label>
-                              Apellido
-                          </ion-label>
-                      </ion-item>
-                  </ion-col>
-                  <ion-col>
-                      <ion-item>
-                          <ion-label>
-                              Nombre
-                          </ion-label>
-                      </ion-item>
-                  </ion-col>
-                  <ion-col>
-                      <ion-item>
-                          <ion-label>
-                              DNI
-                          </ion-label>
-                      </ion-item>
-                  </ion-col>
-                  <ion-col>
-                      <ion-item>
-                          <ion-label>
-                              Ingreso
-                          </ion-label>
-                      </ion-item>
-                  </ion-col>
-                  <ion-col>
-                      <ion-item>
-                          <ion-label>
-                              Egreso
-                          </ion-label>
-                      </ion-item>
-                  </ion-col>
-              </ion-row>
-              <ion-row *ngFor="let e of detalleEvento, let i = index" (click)="presentActionSheet(i)">
-                  <ion-col>
-                      <ion-item>
-                          <ion-label>
-                            {{e.detallePersonaEvento.apellidoPersona}}
-                          </ion-label>
-                      </ion-item>
-                  </ion-col>
-                  <ion-col>
-                      <ion-item>
-                          <ion-label>
-                                {{e.detallePersonaEvento.nombrePersona}}
-                          </ion-label>
-                      </ion-item>
-                  </ion-col>
-                  <ion-col>
-                      <ion-item>
-                          <ion-label>
-                                {{e.detallePersonaEvento.dniPersona}}
-                          </ion-label>
-                      </ion-item>
-                  </ion-col>
-                  <ion-col>
-                      <ion-item>
-                          <ion-label>
-                                {{e.horaIngreso | date:'shortDate'}}
-                          </ion-label>
-                      </ion-item>
-                  </ion-col>
-                  <ion-col>
-                      <ion-item>
-                          <ion-label>
-                                {{e.horaEngreso | date:'shortDate'}}
-                          </ion-label>
-                      </ion-item>
-                  </ion-col>
-              </ion-row>
+                <ion-card>
+                    <ion-row>
+                        <ion-col>
+                            <ion-item>
+                                <ion-label>
+                                    Apellido
+                                </ion-label>
+                            </ion-item>
+                        </ion-col>
+                        <ion-col>
+                            <ion-item>
+                                <ion-label>
+                                    Nombre
+                                </ion-label>
+                            </ion-item>
+                        </ion-col>
+                        <ion-col>
+                            <ion-item>
+                                <ion-label>
+                                    DNI
+                                </ion-label>
+                            </ion-item>
+                        </ion-col>
+                        <ion-col>
+                            <ion-item>
+                                <ion-label>
+                                    Ingreso
+                                </ion-label>
+                            </ion-item>
+                        </ion-col>
+                        <ion-col>
+                            <ion-item>
+                                <ion-label>
+                                    Egreso
+                                </ion-label>
+                            </ion-item>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row *ngFor="let e of detalleEvento, let i = index" (click)="presentActionSheet(i)">
+                        <ion-col>
+                            <ion-item>
+                                <ion-label>
+                                  {{e.detallePersonaEvento.apellidoPersona}}
+                                </ion-label>
+                            </ion-item>
+                        </ion-col>
+                        <ion-col>
+                            <ion-item>
+                                <ion-label>
+                                      {{e.detallePersonaEvento.nombrePersona}}
+                                </ion-label>
+                            </ion-item>
+                        </ion-col>
+                        <ion-col>
+                            <ion-item>
+                                <ion-label>
+                                      {{e.detallePersonaEvento.dniPersona}}
+                                </ion-label>
+                            </ion-item>
+                        </ion-col>
+                        <ion-col>
+                            <ion-item>
+                                <ion-label>
+                                      {{e.horaIngreso | date:'shortDate'}}
+                                </ion-label>
+                            </ion-item>
+                        </ion-col>
+                        <ion-col>
+                            <ion-item>
+                                <ion-label>
+                                      {{e.horaEngreso | date:'shortDate'}}
+                                </ion-label>
+                            </ion-item>
+                        </ion-col>
+                    </ion-row>
+                </ion-card>
           </ion-list>
-          </ion-row>
+        </ion-row>
+    </ng-template> -->
+
+
+    <ng-container *ngIf="evento === undefined;else elseTemplate">
+            <ion-row class="spinner">
+                <ion-spinner name="lines"></ion-spinner>
+            </ion-row>
+        </ng-container>
+        
+        <ng-template #elseTemplate>
+            <ion-row style="place-content: center;">
+                <ion-card class="animated fadeIn">
+                    <ion-item class="even">
+                        <ion-list>
+                            <ion-row>
+                            <ion-col>
+                                <ion-label> Apellido </ion-label>
+                            </ion-col>
+                            <ion-col>
+                                <ion-label> Nombre </ion-label>
+                            </ion-col>
+                            <ion-col>
+                                <ion-label> DNI </ion-label>
+                            </ion-col>
+                            <ion-col>
+                                <ion-label> Ingreso </ion-label>
+                            </ion-col>
+                            <ion-col>
+                                <ion-label> Egreso </ion-label>
+                            </ion-col>
+                            </ion-row>
+                        </ion-list>
+                    </ion-item>
+                    <ion-item *ngFor="let e of detalleEvento, let i = index" (click)="presentActionSheet(i)" [ngClass]="(i % 2 == 0) ? 'odd' : 'even'">
+                        <ion-list>
+                            <ion-row>
+                            <ion-col>
+                                <ion-label> {{e.detallePersonaEvento.apellidoPersona}} </ion-label>
+                            </ion-col>
+                            <ion-col>
+                                <ion-label> {{e.detallePersonaEvento.nombrePersona}} </ion-label>
+                            </ion-col>
+                            <ion-col>
+                                <ion-label> {{e.detallePersonaEvento.dniPersona}} </ion-label>
+                            </ion-col>
+                            <ion-col>
+                                <ion-label>{{e.horaIngreso | date:'shortDate'}}  </ion-label>
+                            </ion-col>
+                            <ion-col>
+                                <ion-label>{{e.horaEngreso | date:'shortDate'}}  </ion-label>
+                            </ion-col>
+                            </ion-row>
+                        </ion-list>
+                    </ion-item>
+                </ion-card>
+            </ion-row>
+        </ng-template>
+
 
 
 </ion-content>
