--- a/src/app/funcionesMenu/planilla-ingreso-egreso/planilla-ingreso-egreso.page.html
+++ b/src/app/funcionesMenu/planilla-ingreso-egreso/planilla-ingreso-egreso.page.html
@@ -9,81 +9,90 @@
 
 <ion-content>
 
-    <ion-row style="text-align-last: center;">
-        <ion-col class="col-fecha">
-            <ion-item>
-                    <ion-label>Fecha Desde:</ion-label>
-                    <ion-datetime displayFormat="DD-MM-YYYY"  
-                                    picker-format="DD-MM-YYYY"
-                                    max="2030-12-31"
-                                    min="2015-01-01"
-                                    [value]="fechaDesde"
-                                    [(ngModel)]="fechaDesde"></ion-datetime>
+    <ng-container *ngIf="planiallaIngresoEgreso === undefined || planiallaIngresoEgreso === null;else elseTemplate">
+        <ion-row class="spinner">
+            <ion-spinner name="lines"></ion-spinner>
+        </ion-row>
+    </ng-container>
+    
+    <ng-template #elseTemplate>
+        <ion-row style="text-align-last: center;" class="animated fadeIn">
+            <ion-col class="col-fecha">
+                <ion-item>
+                        <ion-label>Fecha Desde:</ion-label>
+                        <ion-datetime displayFormat="DD-MM-YYYY"  
+                                        picker-format="DD-MM-YYYY"
+                                        max="2030-12-31"
+                                        min="2015-01-01"
+                                        [value]="fechaDesde"
+                                        [(ngModel)]="fechaDesde"></ion-datetime>
+                    </ion-item>
+            </ion-col>
+            <ion-col class="col-fecha">
+                <ion-item>
+                        <ion-label>Fecha Hasta:</ion-label>
+                        <ion-datetime displayFormat="DD-MM-YYYY"  
+                                        picker-format="DD-MM-YYYY"
+                                        [value]="fechaHasta"
+                                        max="2030-12-31"
+                                        min="2015-01-01"
+                                        [(ngModel)]="fechaHasta"></ion-datetime>
+    
+                    </ion-item>
+            </ion-col>
+            <ion-col>
+                <ion-button (click)="filtrar()" shape="round" fill="outline" color="dark"><ion-icon name="search"></ion-icon></ion-button>
+            </ion-col>
+        </ion-row>
+    
+        <ion-row>
+            <ion-card class="animated fadeIn">
+                <ion-item class="even">
+                    <ion-list>
+                        <ion-row>
+                        <ion-col>
+                            <ion-label> Apellido </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label> Nombre </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label> DNI </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label> Marca </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label> Dominio </ion-label>
+                        </ion-col>
+                        </ion-row>
+                    </ion-list>
                 </ion-item>
-        </ion-col>
-        <ion-col class="col-fecha">
-            <ion-item>
-                    <ion-label>Fecha Hasta:</ion-label>
-                    <ion-datetime displayFormat="DD-MM-YYYY"  
-                                    picker-format="DD-MM-YYYY"
-                                    [value]="fechaHasta"
-                                    max="2030-12-31"
-                                    min="2015-01-01"
-                                    [(ngModel)]="fechaHasta"></ion-datetime>
-
+                <ion-item *ngFor="let p of planilla; let i = index" [ngClass]="(i % 2 == 0) ? 'odd' : 'even'">
+                    <ion-list>
+                        <ion-row>
+                        <ion-col>
+                            <ion-label> {{p.planillaPersona.apellidoPersona}} </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label> {{p.planillaPersona.nombrePersona}} </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label> {{p.planillaPersona.dniPersona}} </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label *ngIf="p.planillaVehiculo?.vehiculoMarca.nombreMarca !== null"> {{p.planillaVehiculo.vehiculoMarca.nombreMarca}} </ion-label>
+                        </ion-col>
+                        <ion-col>
+                            <ion-label *ngIf="p.planillaVehiculo?.vehiculoMarca.dominio !== null"> {{p.planillaVehiculo.dominio}} </ion-label>
+                        </ion-col>
+                        </ion-row>
+                    </ion-list>
                 </ion-item>
-        </ion-col>
-        <ion-col>
-            <ion-button (click)="filtrar()" shape="round" fill="outline" color="dark"><ion-icon name="search"></ion-icon></ion-button>
-        </ion-col>
-    </ion-row>
+            </ion-card>
+        </ion-row>
+    </ng-template>
 
-    <ion-row>
-        <ion-card>
-            <ion-item class="even">
-                <ion-list>
-                    <ion-row>
-                    <ion-col>
-                        <ion-label> Apellido </ion-label>
-                    </ion-col>
-                    <ion-col>
-                        <ion-label> Nombre </ion-label>
-                    </ion-col>
-                    <ion-col>
-                        <ion-label> DNI </ion-label>
-                    </ion-col>
-                    <ion-col>
-                        <ion-label> Marca </ion-label>
-                    </ion-col>
-                    <ion-col>
-                        <ion-label> Dominio </ion-label>
-                    </ion-col>
-                    </ion-row>
-                </ion-list>
-            </ion-item>
-            <ion-item *ngFor="let p of planilla; let i = index" [ngClass]="(i % 2 == 0) ? 'odd' : 'even'">
-                <ion-list>
-                    <ion-row>
-                    <ion-col>
-                        <ion-label> {{p.planillaPersona.apellidoPersona}} </ion-label>
-                    </ion-col>
-                    <ion-col>
-                        <ion-label> {{p.planillaPersona.nombrePersona}} </ion-label>
-                    </ion-col>
-                    <ion-col>
-                        <ion-label> {{p.planillaPersona.dniPersona}} </ion-label>
-                    </ion-col>
-                    <ion-col>
-                        <ion-label *ngIf="p.planillaVehiculo?.vehiculoMarca.nombreMarca !== null"> {{p.planillaVehiculo.vehiculoMarca.nombreMarca}} </ion-label>
-                    </ion-col>
-                    <ion-col>
-                        <ion-label *ngIf="p.planillaVehiculo?.vehiculoMarca.dominio !== null"> {{p.planillaVehiculo.dominio}} </ion-label>
-                    </ion-col>
-                    </ion-row>
-                </ion-list>
-            </ion-item>
-        </ion-card>
-    </ion-row>
 
 
 </ion-content>
