--- a/src/app/ingreso/newperson/newperson.page.html
+++ b/src/app/ingreso/newperson/newperson.page.html
@@ -11,38 +11,47 @@
 
 <ion-content fullscreen>
     <ion-list lines="full" class="ion-no-margin ion-no-padding">
-        <ion-item>
-            <ion-label position="floating">Nombre
-                <ion-text color="danger">*</ion-text>
-            </ion-label>
-            <ion-input required type="text" [(ngModel)]="nombrePersona"></ion-input>
-        </ion-item>
-
-        <ion-item>
-            <ion-label position="floating">Apellido
-                <ion-text color="danger">*</ion-text>
-            </ion-label>
-            <ion-input required type="text" [(ngModel)]="apellidoPersona"></ion-input>
-        </ion-item>
-
-        <ion-item>
-            <ion-label position="floating">Numero de DNI
-                <ion-text color="danger">*</ion-text>
-            </ion-label>
-            <ion-input disabled required type="number" [(ngModel)]="dniPersona"></ion-input>
-        </ion-item>
-
-        <ion-item>
-            <ion-label position="floating">Numero de teléfono
-                <ion-text color="danger">*</ion-text>
-            </ion-label>
-            <ion-input required type="tel" minlength="7" maxlength="10" [(ngModel)]="telefonoPersona"></ion-input>
-        </ion-item>
-
-
-        <div class="ion-padding">
-            <ion-button [disabled]="!(nombrePersona && apellidoPersona && dniPersona && telefonoPersona)" expand="block" type="submit" class="ion-no-margin" (click)="crearPersona()">Crear persona</ion-button>
-        </div>
+        <form [formGroup]="newPersona">
+            <ion-item>
+                <ion-label position="floating">Nombre
+                    <ion-text color="danger">*</ion-text>
+                </ion-label>
+                <ion-input required type="text" name="nombrePersona" formControlName="nombrePersona"></ion-input>
+                <!-- <ion-input required type="text" [(ngModel)]="nombrePersona"></ion-input> -->
+            </ion-item>
+    
+            <ion-item>
+                <ion-label position="floating">Apellido
+                    <ion-text color="danger">*</ion-text>
+                </ion-label>
+                <ion-input required type="text" name="apellidoPersona" formControlName="apellidoPersona"></ion-input>
+                <!-- <ion-input required type="text" [(ngModel)]="apellidoPersona"></ion-input> -->
+            </ion-item>
+    
+            <ion-item>
+                <ion-label position="floating">Numero de DNI
+                    <ion-text color="danger">*</ion-text>
+                </ion-label>
+                <ion-input disabled required type="number" [(ngModel)]="dniPersona" name="dniPersona" formControlName="dniPersona"></ion-input>
+                <!-- <ion-input disabled required type="number" [(ngModel)]="dniPersona"></ion-input> -->
+            </ion-item>
+    
+            <ion-item>
+                <ion-label position="floating">Numero de teléfono
+                    <ion-text color="danger">*</ion-text>
+                </ion-label>
+                <ion-input required type="number" name="telefonoPersona" formControlName="telefonoPersona"></ion-input>
+                <!-- <ion-input required type="tel" minlength="7" maxlength="10" [(ngModel)]="telefonoPersona"></ion-input> -->
+            </ion-item>
+    
+    
+            <div class="ion-padding">
+                <ion-button [disabled]="!newPersona.valid" expand="block" type="submit" class="ion-no-margin" (click)="crearPersona()">Crear persona</ion-button>
+            </div>
+            <div class="ion-padding">
+                <ion-button expand="block" type="submit" class="ion-no-margin" (click)="imprimir()">Imprimir</ion-button>
+            </div>
+        </form>
     </ion-list>
 </ion-content>
 
