--- a/src/app/egreso/egress/egress.page.html
+++ b/src/app/egreso/egress/egress.page.html
@@ -9,7 +9,7 @@
 
 <ion-content class="ion-padding" class="ion-wrap" style="position: relative;">
 
-    <ion-row class="ion-justify-content-around">
+    <!-- <ion-row class="ion-justify-content-around">
         <h3>¿Quien egresa?</h3>
             <ion-item>
                 <ion-label>DNI : </ion-label>
@@ -18,6 +18,19 @@
     </ion-row>
     <div style="text-align-last: right">
         <ion-button class="mt-4" (click)="getPlanillaEgreso()">Aceptar</ion-button>
-    </div>
+    </div> -->
+
+    <form [formGroup]="pers">
+        <ion-row class="ion-justify-content-around">
+            <h3>¿Quién egresa?</h3>
+            <ion-item>
+                <ion-label>DNI : </ion-label>
+                <ion-input type="number" placeholder="Ingrese DNI" name="dni"  formControlName="dni"></ion-input>
+            </ion-item>
+        </ion-row>
+        <div style="float: right;">
+            <ion-button class="mt-4 ion-align-self-end" [disabled]="!pers.valid" (click)="getPlanillaEgreso()">Aceptar</ion-button>
+        </div>
+    </form>
 
 </ion-content>
