--- a/src/app/User/menu-user/menu-user.page.html
+++ b/src/app/User/menu-user/menu-user.page.html
@@ -6,7 +6,7 @@
 
 
 <ion-content class="ion-text-center">
-    <ion-card>
+    <ion-card  class=" animated fadeIn">
         <ion-card-header>
             <ion-card-title>Bienvenido!</ion-card-title>
             <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
