--- a/src/app/shared/personas-bloqueadas/personas-bloqueadas.page.html
+++ b/src/app/shared/personas-bloqueadas/personas-bloqueadas.page.html
@@ -9,7 +9,7 @@
 
 <ion-content class="ion-padding">
 
-    <ng-container *ngIf="persona === undefined;else elseTemplate">
+    <ng-container *ngIf="personas === undefined;else elseTemplate">
         <ion-row class="spinner">
             <ion-spinner name="lines"></ion-spinner>
         </ion-row>
