--- a/src/app/Owner/events/new-friend/new-friend.page.html
+++ b/src/app/Owner/events/new-friend/new-friend.page.html
@@ -18,7 +18,7 @@
                 </ion-item>
             </ion-row>
             <div style="float: right;">
-                <ion-button class="mt-4 ion-align-self-end" [disabled]="!pers.valid" (click)="getpersona()">Aceptar</ion-button>
+                <ion-button class="mt-4 ion-align-self-end" [disabled]="!pers.valid" (click)="verficarSiAmigoExiste()">Aceptar</ion-button>
             </div>
         </form>
 
